Smoke tests: add cargo profile for tomcat7x